First_Step/data/46/152/execution.txt

Comment :=>>-The compilation or preparation of execution has failed
<|--
Tools.java:30: error: duplicate class: Tools
public class Tools {
       ^
1 error
Not compiled
--|>
Grade :=>>0.00000
